--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,11 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.20",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
     "typescript": "^4.1.3",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
