--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode production",
+    "calc": "npx ts-node src/calc",
     "check": "npm test && npm run lint",
     "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix src/",
     "test": "npx jest"
@@ -42,6 +43,7 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1",
