--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "calc": "npx ts-node src/calc",
     "check": "npm test && npm run lint",
     "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix src/",
-    "test": "npx jest"
+    "test": "npx jest",
+    "test-watch": "npx jest --watchAll"
   },
   "husky": {
     "hooks": {
