Fix issue with tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "allowJs": true,
     "jsx": "react",
+    "outDir": "dist",
     "sourceMap": true,
     "strict": true,
     "esModuleInterop": true
