--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run check",
+      "pre-commit": "npm run lint",
       "pre-push": "npm run check"
     }
   },
